gitea/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: gitea-http
  namespace: gitea
  labels:
    app: gitea
spec:
  ingressClassName: nginx
  rules:
    - host: git.mk-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
